--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
+<body>
+
 <h1 align=center>Game dev 2019 by Tyson b </h1>
 
 
-<li><a href="...">...</a>
-<li><a href="...">...</a>
-<li><a href="...">...</a>
-<li><a href="...">...</a>
-<li><a href="...">...</a>
+
+
+   <ol>
+   <li><a href="...">link to my github website</a>
+
+
+   <li><a href="...">link to my github repository</a><br><br>
+
+
+
+
+   <li><a href="https://www.coderbyte.com/algorithm/two-sum-problem">coderbyte-javascript-tutorial about two-sum-problem</a>
+
+
+   <li><a href="t1A01-webstuff-Tyson.html">t1A01-webstuff-Tyson.html</a>
+
+
+   <li><a href="...">...</a>
+
+   <li><a href="...">...</a>
+
+   <li><a href="...">...</a>
+
+   <li><a href="...">...</a>
+
+</body>
+  
