--- a/t1A01-webstuff-tyson.html
+++ b/t1A01-webstuff-tyson.html
@@ -10,4 +10,4 @@ this is <i> italic </i> and <b> bold </b> text <br><br>
 this is an image <br> <img src="thing.png" width=300><br>
 this is an internet image <br> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlyuRv4ZgmsJa22Ven5X2lVjr1Cct8yRQT_FNEayV2ylP64Lcfgw" width=300> <br>
 
-this is a link to <a href="http://.google.ca"> google </a><br>
+this is a link to <a href="https://www.youtube.com/"> youtube </a><br>
