--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <li><a href="t1A01-webstuff-Tyson.html">t1A01-webstuff-Tyson.html</a>
 
 
-   <li><a href="...">...</a>
+   <li><a href="t3a02-advanced-webpage-Tyson">t3a02-advanced-webpage-Tyson</a>
 
    <li><a href="...">...</a>
 
