--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <li><a href="...">link to my github website</a>
 
 
-   <li><a href="...">link to my github repository</a><br><br>
+   <li><a href="https://github.com/grognak44/gamedev11-2019-tyson.b-#gamedev11-2019-tysonb-">link to my github repository</a><br><br>
 
 
 
