--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
    <ol>
-   <li><a href="...">link to my github website</a>
+   <li><a href="https://github.com/grognak44">link to my github website</a>
 
 
    <li><a href="https://github.com/grognak44/gamedev11-2019-tyson.b-#gamedev11-2019-tysonb-">link to my github repository</a><br><br>
