--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
    <li><a href="t1A01-webstuff-Tyson.html">t1A01-webstuff-Tyson.html</a>
 
 
-   <li><a href="t3a02-advanced-webpage-Tyson">t3a02-advanced-webpage-Tyson</a>
+   <li><a href="t3a02-advanced-webpage-Tyson.html">t3a02-advanced-webpage-Tyson</a>
 
    <li><a href="...">...</a>
 
-   <li><a href="...">...</a>
+   <li><a href="t3a04-all-tyson.html">t3a04-all-Tyson</a>
 
    <li><a href="...">...</a>
 
