--- a/t3a05-inner-Tyson.html
+++ b/t3a05-inner-Tyson.html
@@ -1,4 +1,4 @@
-<h1 align=center> InnerHTML by Tyson </h1>
+<h1 align=center> <font color= red> InnerHTML by Tyson </font> </h1>
 
 <a href="https://www.quackit.com/javascript/tutorial/innerhtml_in_javascript.cfm"> innerHTML help </a><br>
 
