--- a/t3a05-inner-Tyson.html
+++ b/t3a05-inner-Tyson.html
@@ -2,7 +2,7 @@
 
 <a href="https://www.quackit.com/javascript/tutorial/innerhtml_in_javascript.cfm"> innerHTML help </a><br>
 
-x = <input type=text id="myText01" value=7>
+Grognak = <input type=text id="myText01" value=7>
 <div id="myDiv01">...</div>
 
 <input type=button value="test inerHTML" onclick="{
