--- a/t3a04-all-tyson.html
+++ b/t3a04-all-tyson.html
@@ -3,7 +3,7 @@
 <script>
 
 function my01(){
- document.all.myArea01.value='wow it worked'
+ document.all.myArea01.value='wow a thing done did happen'
 }
 
 </script>
