--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <li><a href="t3a05-inner-Tyson.html">t3a05-inner-Tyson</a>
     
-   <li><a href="...">...</a>
+   <li><a href="t3a06-move image-tyson.html">t3a06-move image-Tyson</a>
 
    <li><a href="...">...</a>
 
