--- a/t3a06-move image-tyson.html
+++ b/t3a06-move image-tyson.html
@@ -24,7 +24,7 @@ style="position:relative; left:0px; top:0px; height:100px; width:100px">
  document.getElementById('thing').style.left=
  parseInt(document.getElementById('thing').style.left) - 10 + 'px'
 }"></td>
-<td></td><td><input type=button value="       right        " onclick="{ 
+<td><input type=button value=" stop "></td><td><input type=button value="       right        " onclick="{ 
  document.getElementById('thing').style.left=
  parseInt(document.getElementById('thing').style.left) + 10 + 'px'
 }"></tr></td>
