--- a/t3a06-move image-tyson.html
+++ b/t3a06-move image-tyson.html
@@ -1,5 +1,5 @@
+<body background="background.gif">
 <h2 align=center> move image by Tyson </h2>
-
 <img src="owl bear.jfif" width="100px" id="thing"
 style="position:relative; left:0px; top:0px; height:100px; width:100px">
 
@@ -45,3 +45,4 @@ style="position:relative; left:0px; top:0px; height:100px; width:100px">
  parseInt(document.getElementById('thing').style.left) + 10 + 'px'
 }"> </tr></td>
 </table>
+</body>
