--- a/t3a06-move image-tyson.html
+++ b/t3a06-move image-tyson.html
@@ -1,48 +1,49 @@
-<body background="background.gif">
-<h2 align=center> move image by Tyson </h2>
-<img src="owl bear.jfif" width="100px" id="thing"
-style="position:relative; left:0px; top:0px; height:100px; width:100px">
+<body background=" matrix.gif">
+<h2 align=center> <font color=red> move image by Tyson </font> </h2>
+<img src="person.gif" width="500px" id="thing"
+style="position:relative; left:0px; top:0px; height:125px; width:125px">
 
-<table border=3>
+<table border=3 align=center>
 <tr><td><input type=button value="   up left     " onclick="{
  document.getElementById('thing').style.top=
- parseInt(document.getElementById('thing').style.top) - 10 + 'px'
+ parseInt(document.getElementById('thing').style.top) - 25 + 'px'
  document.getElementById('thing').style.left=
- parseInt(document.getElementById('thing').style.left) - 10 + 'px'
+ parseInt(document.getElementById('thing').style.left) - 25 + 'px'
 }"> </td>
 <td><input type=button value="   up  " onclick="{
  document.getElementById('thing').style.top=
- parseInt(document.getElementById('thing').style.top) - 10 + 'px'
+ parseInt(document.getElementById('thing').style.top) - 25 + 'px'
 }"></td>
 <td><input type=button value="     up right     " onclick="{
  document.getElementById('thing').style.top=
- parseInt(document.getElementById('thing').style.top) - 10 + 'px'
+ parseInt(document.getElementById('thing').style.top) - 25 + 'px'
  document.getElementById('thing').style.left=
- parseInt(document.getElementById('thing').style.left) + 10 + 'px'
+ parseInt(document.getElementById('thing').style.left) + 25 + 'px'
 }"> </tr></td>
 <tr><td><input type=button value="       left      " onclick="{
  document.getElementById('thing').style.left=
- parseInt(document.getElementById('thing').style.left) - 10 + 'px'
+ parseInt(document.getElementById('thing').style.left) - 25 + 'px'
 }"></td>
-<td><input type=button value=" stop "></td><td><input type=button value="       right        " onclick="{ 
+<td><input type=button value=" stop " onclick="alert('you have crimes against skyrim and her people what say you in your defence')"></td>
+<td><input type=button value="       right        " onclick="{ 
  document.getElementById('thing').style.left=
- parseInt(document.getElementById('thing').style.left) + 10 + 'px'
+ parseInt(document.getElementById('thing').style.left) + 25 + 'px'
 }"></tr></td>
 <tr><td><input type=button value=" down left  " onclick="{
  document.getElementById('thing').style.top=
- parseInt(document.getElementById('thing').style.top) + 10 + 'px'
+ parseInt(document.getElementById('thing').style.top) + 25 + 'px'
  document.getElementById('thing').style.left=
- parseInt(document.getElementById('thing').style.left) - 10 + 'px'
+ parseInt(document.getElementById('thing').style.left) - 25 + 'px'
 }"> </td>
 <td><input type=button value="down" onclick="{
  document.getElementById('thing').style.top=
- parseInt(document.getElementById('thing').style.top) + 10 + 'px'
+ parseInt(document.getElementById('thing').style.top) + 25 + 'px'
 }"></td>
 <td><input type=button value=" down right     " onclick="{
  document.getElementById('thing').style.top=
- parseInt(document.getElementById('thing').style.top) + 10 + 'px'
+ parseInt(document.getElementById('thing').style.top) + 25 + 'px'
  document.getElementById('thing').style.left=
- parseInt(document.getElementById('thing').style.left) + 10 + 'px'
+ parseInt(document.getElementById('thing').style.left) + 25 + 'px'
 }"> </tr></td>
 </table>
 </body>
