--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
    <li><a href="t3a06-move image-tyson.html">t3a06-move image-Tyson</a>
 
-   <li><a href="...">...</a>
+   <li><a href="t3a07-WASD-onkeydown-Tyson.html">t3a07-WASD-on key down-Tyson</a>
 
    <li><a href="...">...</a>
  
