--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
    <li><a href="...">...</a>
  
-   <li><a href="...">...</a>
+   <li><a href="t3a09-auto background-tyson.html">t3a09-auto background-Tyson</a>
 
-   <li><a href="...">...</a>
+   <li><a href="t3a10-collisions-Tyson.html">t3a10-collisions-Tyson</a>
 
    <li><a href="...">...</a>
 </body>
