--- a/t3a10-collisions-Tyson.html
+++ b/t3a10-collisions-Tyson.html
@@ -1,3 +1,6 @@
+<head>
+<link rel="shortcut icon" href="danny.ico" type="image/x-icon"> 
+</head>
 <body bgcolor="yellow"   onMouseMove="{
    document.all.myLocation.value = 'left: '+event.x+', top: '+ event.y
 
