--- a/index.html
+++ b/index.html
@@ -39,5 +39,13 @@
    <li><a href="t3a10-collisions-Tyson.html">t3a10-collisions-Tyson</a>
 
    <li><a href="...">...</a>
+
+   <li><a href="...">...</a>
+
+   <li><a href="...">...</a>
+
+   <li><a href="...">...</a>
+
+   <li><a href="...">...</a>
 </body>
   
