--- a/t3a10-collisions-Tyson.html
+++ b/t3a10-collisions-Tyson.html
@@ -7,11 +7,9 @@
 
 
 }">
-<h2 align=center>Collisions by tyson </h2>
+<h2 align=center>Collisions by Tyson </h2>
 
-<script>
 
-</script>
 
 <input type=text id="myLocation" value=0 size=14"><br>
 <hr>
@@ -25,22 +23,35 @@ style="position:absolute; z-index:-1; left:100px; top:0px; height:50px; width:50
 
 
 <input type=button value="Go right"  onClick="{
+ if ( myHitOther('myImage01','myImage02') ){
+       document.getElementById('myImage01').style.left = '10px'
+       //alert('I win')
+
+   }
    document.getElementById('myImage01').style.left = 
       parseInt(document.getElementById('myImage01').style.left) + 10 + 'px'
     
    //document.getElementById('myImage01').style.top = parseInt(document.getElementById('myImage01').style.top) + 10 + 'px'
+}">
+
+<input type=button value="Go left"  onClick="{
+   document.getElementById('myImage01').style.left = 
+      parseInt(document.getElementById('myImage01').style.left) - 10 + 'px'
+    
+   //document.getElementById('myImage01').style.top = parseInt(document.getElementById('myImage01').style.top) + 10 + 'px'
+
 
 }">
 <script>
 function myHitOther(myImage01,myImage02){
-   left1   = parseInt(document.getElementById(my1).style.left)
-   right1  = left1 + parseInt(document.getElementById(my1).style.width)
-   top1    = parseInt(document.getElementById(my1).style.top)   
-   bottom1 = top1   + parseInt(document.getElementById(my1).style.height)
-   left2   = parseInt(document.getElementById(my2).style.left)
-   right2  = left2 + parseInt(document.getElementById(my2).style.width)
-   top2    = parseInt(document.getElementById(my2).style.top)   
-   bottom2 = top2   + parseInt(document.getElementById(my2).style.height)
+   left1   = parseInt(document.getElementById(myImage01).style.left)
+   right1  = left1 + parseInt(document.getElementById(myImage01).style.width)
+   top1    = parseInt(document.getElementById(myImage01).style.top)   
+   bottom1 = top1   + parseInt(document.getElementById(myImage01).style.height)
+   left2   = parseInt(document.getElementById(myImage02).style.left)
+   right2  = left2 + parseInt(document.getElementById(myImage02).style.width)
+   top2    = parseInt(document.getElementById(myImage02).style.top)   
+   bottom2 = top2   + parseInt(document.getElementById(myImage02).style.height)
    if ((right1  >=  left2  ) &&      	   
        (bottom1 >=  top2   ) &&
        (left1   <=  right2 ) &&
