--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
    <li><a href="t3a10-collisions-Tyson.html">t3a10-collisions-Tyson</a>
 
-   <li><a href="t3a11-functions-Tyson.html">t3a11-functions-Tyson</a>
+   <li><a href="t3a11-functions-pass-Tyson.html">t3a11-functions-Tyson</a>
 
    <li><a href="...">...</a>
 
