--- a/t3a11-function-pass-Tyson.html
+++ b/t3a11-function-pass-Tyson.html
@@ -1,4 +1,5 @@
-<h1 align=center> Functions by Tyson</h1>
+<h1 align=center> Functions Pass by Tyson </h1>
+<body background= "red.jpg">
 <script>
 
 function mySquare(myNumber){
@@ -9,42 +10,43 @@ function mySquare(myNumber){
 <div id=myDiv01>...</div><br>
 
 <input type=button value="1" onclick="{
-myVariable = 1
+myVariable =  1 
 mySquare(myVariable)
 }">
-
+<br>
 <input type=button value="2" onclick="{
 myVariable = 4
 mySquare(myVariable)
 }">
-
+<br>
 <input type=button value="3" onclick="{
 myVariable = 9
 mySquare(myVariable)
 }">
-
+<br>
 <input type=button value="4" onclick="{
 myVariable = 16
 mySquare(myVariable)
 }">
-
+<br>
 <input type=button value="5" onclick="{
 myVariable = 25
 mySquare(myVariable)
 }">
-
+<br>
 <input type=button value="6" onclick="{
 myVariable = 36
 mySquare(myVariable)
 }">
-
+<br>
 <input type=button value="7" onclick="{
 myVariable = 49
 mySquare(myVariable)
 }">
-
+<br>
 <input type=button value="8" onclick="{
 myVariable = 64
 mySquare(myVariable)
 }">
 
+</body>
