--- a/t3a11-function-pass-Tyson.html
+++ b/t3a11-function-pass-Tyson.html
@@ -7,45 +7,45 @@ function mySquare(myNumber){
 }
 
 </script>
-<div id=myDiv01>...</div><br>
+<div id=myDiv01>the square is </div><br>
 
 <input type=button value="1" onclick="{
-myVariable =  1 
+myVariable =   1 
 mySquare(myVariable)
 }">
 <br>
 <input type=button value="2" onclick="{
-myVariable = 4
+myVariable =  4
 mySquare(myVariable)
 }">
 <br>
 <input type=button value="3" onclick="{
-myVariable = 9
+myVariable =   9
 mySquare(myVariable)
 }">
 <br>
 <input type=button value="4" onclick="{
-myVariable = 16
+myVariable =  16
 mySquare(myVariable)
 }">
 <br>
 <input type=button value="5" onclick="{
-myVariable = 25
+myVariable =  25
 mySquare(myVariable)
 }">
 <br>
 <input type=button value="6" onclick="{
-myVariable = 36
+myVariable =  36
 mySquare(myVariable)
 }">
 <br>
 <input type=button value="7" onclick="{
-myVariable = 49
+myVariable =  49
 mySquare(myVariable)
 }">
 <br>
 <input type=button value="8" onclick="{
-myVariable = 64
+myVariable =  64
 mySquare(myVariable)
 }">
 
