--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
    <li><a href="t3a10-collisions-Tyson.html">t3a10-collisions-Tyson</a>
 
-   <li><a href="t3a11-functions-pass-Tyson.html">t3a11-functions-Tyson</a>
+   <li><a href="t3a11-functions-pass-Tyson.html">t3a11-functions-pass-Tyson</a>
 
-   <li><a href="...">...</a>
+   <li><a href="t3a12-2d-arrays-Tyson.html">t3a12-2d-arrays-Tyson</a>
 
    <li><a href="...">...</a>
 
