--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <li><a href="https://www.coderbyte.com/algorithm/two-sum-problem">coderbyte-javascript-tutorial about two-sum-problem</a>
 
 
-   <li><a href="t1A01-webstuff-Tyson.html">t1A01-webstuff-Tyson.html</a>
+   <li><a href="t1A01-webstuff-tyson.html">t1A01-webstuff-Tyson.html</a>
 
 
    <li><a href="t3a02-advanced-webpage-Tyson.html">t3a02-advanced-webpage-Tyson</a>
@@ -38,7 +38,7 @@
 
    <li><a href="t3a10-collisions-Tyson.html">t3a10-collisions-Tyson</a>
 
-   <li><a href="t3a11-functions-pass-Tyson.html">t3a11-functions-pass-Tyson</a>
+   <li><a href="t3a11-function-pass-Tyson.html">t3a11-functions-pass-Tyson</a>
 
    <li><a href="t3a12-2d-arrays-Tyson.html">t3a12-2d-arrays-Tyson</a>
 
