--- a/t3a12-2d-arrays-Tyson.html
+++ b/t3a12-2d-arrays-Tyson.html
@@ -1,4 +1,5 @@
 <h1 align=center> 2D Arrays By Tyson </h1>
+<p align=center> <font color=red>click anywhere</font></p>
 <body background="blue.jfif"
 <input type=button value="generate 2D Array" onclick="{
 
