--- a/t3a11-function-pass-Tyson.html
+++ b/t3a11-function-pass-Tyson.html
@@ -8,45 +8,46 @@ function mySquare(myNumber){
 
 </script>
 <div id=myDiv01>the square is </div><br>
-
-<input type=button value="1" onclick="{
+<table border=3>
+<tr><td><input type=button value="1" onclick="{
 myVariable =   1 
 mySquare(myVariable)
 }">
-<br>
-<input type=button value="2" onclick="{
+</td>
+<td><input type=button value="2" onclick="{
 myVariable =  4
 mySquare(myVariable)
 }">
-<br>
-<input type=button value="3" onclick="{
+</tr></td>
+<tr><td><input type=button value="3" onclick="{
 myVariable =   9
 mySquare(myVariable)
 }">
-<br>
-<input type=button value="4" onclick="{
+</td>
+<td><input type=button value="4" onclick="{
 myVariable =  16
 mySquare(myVariable)
 }">
-<br>
-<input type=button value="5" onclick="{
+</tr></td>
+<tr><td><input type=button value="5" onclick="{
 myVariable =  25
 mySquare(myVariable)
 }">
-<br>
-<input type=button value="6" onclick="{
+</td>
+<td><input type=button value="6" onclick="{
 myVariable =  36
 mySquare(myVariable)
 }">
-<br>
-<input type=button value="7" onclick="{
+</tr></td>
+<tr><td><input type=button value="7" onclick="{
 myVariable =  49
 mySquare(myVariable)
 }">
-<br>
-<input type=button value="8" onclick="{
+</td>
+<td><input type=button value="8" onclick="{
 myVariable =  64
 mySquare(myVariable)
 }">
-
+<tr></td>
+</table>
 </body>
