--- a/t3a13-review-Tyson.html
+++ b/t3a13-review-Tyson.html
@@ -1,4 +1,5 @@
 <h1 align=center> Review By Tyson </h1>
+<body background="red.jpg"
 <input type=text id="myText01" value="3"><br>
 
 <textarea id="myArea01" rows=4 cols=70>Howdy</textarea><br>
@@ -22,3 +23,13 @@
      document.all.myArea01.value += x + ','
    }
 }">
+
+<input type=button value="advanced" onclick="{
+ person = {
+   firstName: 'Grognak',
+   lastName: 'Kangorg',
+   age: 25,
+}
+   document.all.myArea01.value = 'firstname:' +
+      person.firstName + ',lastname:' + person.lastName + ',age:' + person.age
+}"> 
