--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body>
+<body background="blood.gif">
 
 <h1 align=center>Game dev 2019 by Tyson b </h1>
 
@@ -42,7 +42,7 @@
 
    <li><a href="t3a12-2d-arrays-Tyson.html">t3a12-2d-arrays-Tyson</a>
 
-   <li><a href="...">...</a>
+   <li><a href="t3a13-review-Tyson.html">t3a13-review-Tyson</a>
 
    <li><a href="...">...</a>
 
