--- a/t3a13-review-Tyson.html
+++ b/t3a13-review-Tyson.html
@@ -1,8 +1,8 @@
 <h1 align=center> Review By Tyson </h1>
-<body background="red.jpg"
+<body background="red.jpg">
 <input type=text id="myText01" value="3"><br>
 
-<textarea id="myArea01" rows=4 cols=70>Howdy</textarea><br>
+<textarea id="myArea01" rows=4 cols=70>this is a textbox</textarea><br>
 
 <input type=button value="courses" onmouseover="{
    document.all.myArea01.value = '1.input/output 2. varibles 3. decisions 4.loops 5.arrays 6.functions 7. events 8. objects 9.classes'
@@ -11,15 +11,15 @@
 <input type=button value="basic" onclick="{
       x = document.all.myText01.value
    if (x == 3){
-     document.all.myArea01.value = 'Wow a three'
+     document.all.myArea01.value = 'that a three you smart'
   } else{
-     document.all.myArea01.value = 'Wow not a three'
+     document.all.myArea01.value = ' that not a three you dumb'
   }
 
 }">
 <input type=button value="medium" onclick="{
   document.all.myArea01.value = ''
-  for ( x=1; x <=100; x++){
+  for ( x=1; x <=10000; x++){
      document.all.myArea01.value += x + ','
    }
 }">
