--- a/t3a13-review-Tyson.html
+++ b/t3a13-review-Tyson.html
@@ -10,10 +10,10 @@
 
 <input type=button value="basic" onclick="{
       x = document.all.myText01.value
-   if (x == 3){
-     document.all.myArea01.value = 'that a three you smart'
+   if (x ==  3){
+     document.all.myArea01.value = 'holy sh** thats a 3'
   } else{
-     document.all.myArea01.value = ' that not a three you dumb'
+     document.all.myArea01.value = ' that be a number that aint 3'
   }
 
 }">
