--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body background="blood.gif">
+<body background="danny.jfif">
 
 <h1 align=center>Game dev 2019 by Tyson b </h1>
 
@@ -46,6 +46,10 @@
 
    <li><a href="...">...</a>
 
+   <li><a href="...">...</a>
+    
+   <li><a href="...">...</a>
+   
    <li><a href="...">...</a>
 </body>
   
