--- a/t3a13-review-Tyson.html
+++ b/t3a13-review-Tyson.html
@@ -29,7 +29,8 @@
    firstName: 'Grognak',
    lastName: 'Kangorg',
    age: 25,
+   eyeColour: 'red',
 }
-   document.all.myArea01.value = 'firstname:' +
-      person.firstName + ',lastname:' + person.lastName + ',age:' + person.age
+   document.all.myArea01.value = 'first name:' +
+      person.firstName + ',last name:' + person.lastName + ',age:' + person.age + ', eye colour:' + person.eyeColour
 }"> 
