--- a/t3a13-review-Tyson.html
+++ b/t3a13-review-Tyson.html
@@ -13,10 +13,10 @@
 
 <input type=button value="basic" onclick="{
       x = document.all.myText01.value
-   if (x ==  3){
-     document.all.myArea01.value = 'holy sh** thats a 3'
+   if (x ==  69){
+     document.all.myArea01.value = 'nice'
   } else{
-     document.all.myArea01.value = ' that be a number that aint 3'
+     document.all.myArea01.value = ' sike thats the wrong number'
   }
 
 }">
