--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
    <li><a href="t3a13-review-Tyson.html">t3a13-review-Tyson</a>
 
-   <li><a href="...">...</a>
+   <li><a href="t3a14-classes-new-Tyson.html">t3a14-classes-new-Tyson</a>
 
    <li><a href="...">...</a>
     
-   <li><a href="...">...</a>
+   <li><a href="t4a01-spy-Tyson.html">t4a01-spy-Tyson</a>
    
    <li><a href="...">...</a>
 </body>
