--- a/t4a02-canvas-Tyson.html
+++ b/t4a02-canvas-Tyson.html
@@ -1,14 +1,17 @@
-<h2 align=center>Basic canvas drawings</h2>
 
-you use loops and varibles to make fast fancy drawings<br><br>
+<h2 align=center>Basic Canvas drawing</h2>
+
+You use loops and variables to make fast fancy drawings <br><br>
 
 <input type=button value=".lineTo(30,200)" onclick="{
    myContext.beginPath();
-   myContext.lineWidth = 1;
+   myContext.lineWidth = 1;   
    myContext.moveTo(20,10);
    myContext.lineTo(30,200);
    myContext.stroke();
+
 }">
+
 
 <input type=button value=".arc(95, 50, 40, 0, 2 * Math.PI)" onclick="{
    myContext.beginPath();
@@ -16,35 +19,45 @@ you use loops and varibles to make fast fancy drawings<br><br>
    myContext.strokeStyle = 'green';
    myContext.arc(95, 50, 40, 0, 2 * Math.PI);
    myContext.stroke();
+
 }">
 
-<input type=button value =".fillText('hello world', 400, 100)" onclick="{
+
+<input type=button value=".fillText('Hello World', 400, 100)" onclick="{
 
    myContext.font = '20px Arial';
-   mycontext.fillText('Hello world', 400, 100);
-   
-   myContext.translate(400, 100);
-   myContext.rotate(60 * Math.PI / 180);
+   myContext.fillText('Hello World', 400, 100);
 
-   myContext.fillText('Hello world', 10, 10);
+   myContext.translate(400, 100);  // move rotation point from 0,0
+   myContext.rotate(60 * Math.PI / 180); // 60 in degrees
+
+   myContext.fillText('Hello World', 10, 10);
    myContext.stroke();
+
+  // reset
+   myContext.resetTransform();  // move rotation point from 0,0
+   //myContext.rotate(-60 * Math.PI / 180); // 60 in degrees
 }">
 
-<input type=button value="quadraticCurveTo(100,220,240,110)" onclick="{
-   myContext.beginPath():
+<input type=button value=".quadraticCurveTo(100,220,240,110)" onclick="{
+   myContext.beginPath();
    myContext.moveTo(300,100);
    myContext.quadraticCurveTo(100,220,240,110);
    myContext.stroke();
+
 }">
+
 
 <input type=button value=".createLinearGradient(100, 300, 200, 400)" onclick="{
    let myGradient = myContext.createLinearGradient(100, 300, 200, 400);
    myGradient.addColorStop(0, 'red');
    myGradient.addColorStop(0.5, 'blue');
-   myGradient.addColorstop(1, 'yellow');
+   myGradient.addColorStop(1, 'yellow');
 
-   myContext.fillStyle = myGradient:
+   myContext.fillStyle = myGradient;
    myContext.fillRect(100, 300, 200, 400);
+
+   // reset fillstyle
    myContext.fillStyle = 'black';
 }">
 
@@ -54,17 +67,20 @@ you use loops and varibles to make fast fancy drawings<br><br>
    myContext.clearRect(20, 20, 50, 50);
 }">
 
-<input type=button value="Clear all" onClick="{
+
+<input type=button value="Clear all" onclick="{
    myContext.clearRect(0, 0, myCanvas.width, myCanvas.height);
 }">
+
 
 <br><br>
 
 <canvas id="myCoolTag" width="1000" height="600" style="border:1px solid #000000;"></canvas>
 
 <script>
-
+   // set up global variables
    let myCanvas=document.getElementById('myCoolTag');
    let myContext=myCanvas.getContext('2d');
 
 </script>
+
