--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     
    <li><a href="t4a01-spy-Tyson.html">t4a01-spy-Tyson</a>
    
+   <li><a href="t4a02-canvas-Tyson.html">t4a02-canvas-Tyson</a>
+  
+   <li><a href="...">...</a>
+   
+   <li><a href="...">...</a>  
+  
    <li><a href="...">...</a>
 </body>
   
