--- a/t4a02-canvas-Tyson.html
+++ b/t4a02-canvas-Tyson.html
@@ -23,15 +23,15 @@ You use loops and variables to make fast fancy drawings <br><br>
 }">
 
 
-<input type=button value=".fillText('Hello World', 400, 100)" onclick="{
+<input type=button value=".fillText('Howdy', 400, 100)" onclick="{
 
    myContext.font = '20px Arial';
-   myContext.fillText('Hello World', 400, 100);
+   myContext.fillText('Howdy', 400, 100);
 
    myContext.translate(400, 100);  // move rotation point from 0,0
    myContext.rotate(60 * Math.PI / 180); // 60 in degrees
 
-   myContext.fillText('Hello World', 10, 10);
+   myContext.fillText('shadow of howdy', 10, 10);
    myContext.stroke();
 
   // reset
@@ -63,8 +63,8 @@ You use loops and variables to make fast fancy drawings <br><br>
 
 <br><br>
 
-<input type=button value="clearRect(20, 20, 50, 50)" onclick="{
-   myContext.clearRect(20, 20, 50, 50);
+<input type=button value="clearRect(50, 50, 100, 100)" onclick="{
+   myContext.clearRect(200, 200, 300, 300);
 }">
 
 
