--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
    <li><a href="t3a02-advanced-webpage-Tyson.html">t3a02-advanced-webpage-Tyson</a>
 
-   <li><a href="...">...</a>
+   <li><a href="t3a03-buttons-Tyson.html">t3a03-buttons-Tyson</a>
 
    <li><a href="t3a04-all-tyson.html">t3a04-all-Tyson</a>
 
@@ -56,6 +56,6 @@
    
    <li><a href="...">...</a>  
   
-   <li><a href="...">...</a>
+   <li><a href="final-Tyson.html">final-Tyson</a>
 </body>
   
