--- a/final-Tyson.html
+++ b/final-Tyson.html
@@ -1,4 +1,66 @@
 <head>
 <link rel="shortcut icon" href="danny.ico" type="image/x-icon"> 
 </head>
+<body background=" red">
+<img src="gorgnak.png"  id="myImage01" 
+style="position:absolute; z-index:-1; left:0px; top:0px; height:100px; width:100px;">
+
+
+<img src="danny.jfif"  id="myImage02" 
+style="position:absolute; z-index:-1; left:1500px; top:50px; height:50px; width:50px;">
+
+
+
+<body onkeydown="{
+if ( myHitOther('myImage01','myImage02') ){
+document.getElementById('myImage01')
+location='https://static.giantbomb.com/uploads/square_medium/0/4404/492530-danny_devito2.jpg'
+       
+}
+
+   if (event.key == 'd') {
+      document.getElementById('myImage01').style.left =
+      parseInt(document.getElementById('myImage01').style.left) + 10 + 'px'
+
+   } 
+
+if (event.key == 's') {
+      document.getElementById('myImage01').style.top =
+      parseInt(document.getElementById('myImage01').style.top) + 10 + 'px'
+   } 
+
+if (event.key == 'a') {
+      document.getElementById('myImage01').style.left =
+      parseInt(document.getElementById('myImage01').style.left) - 10 + 'px'
+   } 
+
+if (event.key == 'w') {
+      document.getElementById('myImage01').style.top =
+      parseInt(document.getElementById('myImage01').style.top) - 10 + 'px'
+   } 
+
+
+}">
+<script>
+function myHitOther(myImage01,myImage02){
+   left1   = parseInt(document.getElementById(myImage01).style.left)
+   right1  = left1 + parseInt(document.getElementById(myImage01).style.width)
+   top1    = parseInt(document.getElementById(myImage01).style.top)   
+   bottom1 = top1   + parseInt(document.getElementById(myImage01).style.height)
+   left2   = parseInt(document.getElementById(myImage02).style.left)
+   right2  = left2 + parseInt(document.getElementById(myImage02).style.width)
+   top2    = parseInt(document.getElementById(myImage02).style.top)   
+   bottom2 = top2   + parseInt(document.getElementById(myImage02).style.height)
+   if ((right1  >=  left2  ) &&      	   
+       (bottom1 >=  top2   ) &&
+       (left1   <=  right2 ) &&
+       (top1    <=  bottom2) ){
+       return true
+   }
+}
+</script>
+
+
+
+</body>
 
