--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<body background="danny.jfif">
+<head>
+<link rel="shortcut icon" href="danny.ico" type="image/x-icon"> 
+</head>
+<body background="art.png">
 
 <h1 align=center>Game dev 2019 by Tyson b </h1>
 
@@ -32,7 +35,7 @@
 
    <li><a href="t3a07-WASD-onkeydown-Tyson.html">t3a07-WASD-on key down-Tyson</a>
 
-   <li><a href="...">...</a>
+   <li><a href="t3a08-auto-move-Tyson.html">t3a08-auto-move-Tyson</a>
  
    <li><a href="t3a09-auto background-tyson.html">t3a09-auto background-Tyson</a>
 
@@ -57,5 +60,8 @@
    <li><a href="...">...</a>  
   
    <li><a href="final-Tyson.html">final-Tyson</a>
+
+
 </body>
+
   
