--- a/final-Tyson.html
+++ b/final-Tyson.html
@@ -1,6 +1,7 @@
 <head>
 <link rel="shortcut icon" href="danny.ico" type="image/x-icon"> 
 </head>
+<body background="art.png">
 <img src="gorgnak.png"  id="gorgnak" 
 style="position:absolute; z-index:1; left:0px; top:0px; height:100px; width:100px;">
 
